@@ -72,26 +72,7 @@ pipeline {
             }
         }
 
-      stage('Créer .rpm') {
-    when { expression { isUnix() } }
-    steps {
-        echo '📦 Création .rpm pour Fedora...'
-        sh '''
-            mkdir -p dist
-            jpackage \
-              --type rpm \
-              --input target \
-              --dest dist \
-              --name CalculatriceDEEVEN \
-              --main-jar ${JAR_NAME} \
-              --main-class com.example.CalculatriceApp \
-              --icon icon.png \
-              --linux-shortcut \
-              --java-options "--module-path $JAVAFX_LIB --add-modules javafx.controls,javafx.fxml" \
-              --verbose
-        '''
-    }
-}
+
 
       
     }
